Issue #3 - Migrate from javax to jakarta